style: es5 to es6

--- a/problems/22.generate-parentheses.md
+++ b/problems/22.generate-parentheses.md
@@ -26,11 +26,11 @@ For example, given n = 3, a solution set is:
  * @param {number} n
  * @return {string[]}
  */
-const generateParenthesis = function (n) {
-  const res = [];
+const generateParenthesis = (n) => {
+  const result = [];
   const help = (cur, left, right) => {
     if (cur.length === 2 * n) {
-      res.push(cur);
+      result.push(cur);
       return;
     }
     if (left < n) {
@@ -41,6 +41,6 @@ const generateParenthesis = function (n) {
     }
   };
   help("", 0, 0);
-  return res;
+  return result;
 };
 ```
